force-app/main/default/objects/Template_Line_Item__c/Template_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Template Line Item</label>
    <nameField>
        <label>Template Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>