force-app/main/default/objects/Template_Line_Item__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>Employee feedback questions asked from customers</description>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>