force-app/main/default/objects/Template_Line_Item__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <label>Template</label>
    <referenceTo>Template__c</referenceTo>
    <relationshipLabel>Template Line Items</relationshipLabel>
    <relationshipName>Template_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>